--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   geocoding: ^2.0.2
   google_maps_flutter: ^2.1.1
   location: ^4.2.0
+  flutter_staggered_grid_view: ^0.3.1
 
 
 dev_dependencies:
