--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   flutter_rating_bar: ^4.0.0
   circular_menu: 1.2.3
   bordered_text: ^2.0.0
-  percent_indicator: ^3.0.1
+  # percent_indicator: ^3.0.1
   flutter_arc_speed_dial: ^2.0.0
   #smooth_star_rating: ^1.1.1
   flutter_svg: ^0.22.0
@@ -34,6 +34,7 @@ dependencies:
   google_maps_flutter: ^2.1.1
   location: ^4.2.0
   flutter_staggered_grid_view: ^0.3.1
+  percent_indicator: ^3.4.0
 
 
 dev_dependencies:
