--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   location: ^4.2.0
   flutter_staggered_grid_view: ^0.3.1
   percent_indicator: ^3.4.0
+  blur: ^3.0.0
 
 
 dev_dependencies:
